--- a/about.html
+++ b/about.html
@@ -143,44 +143,48 @@
             <div class="row">
                 <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute w-100 h-100" src="img/about.jpg" style="object-fit: cover;">
+
+                        eat;">
                     </div>
                 </div>
                 <div class="col-lg-7">
                     <div class="section-title position-relative mb-4">
                         <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">About Us</h6>
-                        <h1 class="display-4">First Choice For Online Education Anywhere</h1>
+                        <h1 class="display-4">Excellency in Abroad Education</h1>
                     </div>
-                    <p>Tempor erat elitr at rebum at at clita aliquyam consetetur. Diam dolor diam ipsum et, tempor
-                        voluptua sit consetetur sit. Aliquyam diam amet diam et eos sadipscing labore. Clita erat ipsum
-                        et lorem et sit, sed stet no labore lorem sit. Sanctus clita duo justo et tempor consetetur
-                        takimata eirmod, dolores takimata consetetur invidunt magna dolores aliquyam dolores dolore.
-                        Amet erat amet et magna</p>
+                    <p>
+                        Mtendere Education Consultancy is a leading online education company dedicated to providing high-quality education to its clients. Our mission is to help students achieve their dreams and achieve their academic goals, while also providing them with the tools and support they need to succeed.
+                        We strive to provide our clients with the best possible education experience, while also ensuring that our students receive the necessary resources and support to succeed.
+                        Our team of experts and talented instructors are committed to providing our clients with the best possible education experience. We strive to create a safe, supportive, and inclusive learning environment where students feel valued and encouraged to succeed.
+
+                    </p>
                     <div class="row pt-3 mx-0">
                         <div class="col-3 px-0">
                             <div class="bg-success text-center p-4">
-                                <h1 class="text-white" data-toggle="counter-up">123</h1>
-                                <h6 class="text-uppercase text-white">Available<span class="d-block">Subjects</span>
+                                <h1 class="text-white" data-toggle="counter-up">1000+</h1>
+                                <h6 class="text-uppercase text-white">Available<span class="d-block">Scholaships & Studies</span>
                                 </h6>
                             </div>
                         </div>
                         <div class="col-3 px-0">
                             <div class="bg-primary text-center p-4">
-                                <h1 class="text-white" data-toggle="counter-up">1234</h1>
-                                <h6 class="text-uppercase text-white">Online<span class="d-block">Courses</span></h6>
+                                <h1 class="text-white" data-toggle="counter-up">1500+</h1>
+                                <h6 class="text-uppercase text-white">International<span class="d-block">Students</span></h6>
                             </div>
                         </div>
                         <div class="col-3 px-0">
                             <div class="bg-secondary text-center p-4">
-                                <h1 class="text-white" data-toggle="counter-up">123</h1>
-                                <h6 class="text-uppercase text-white">Skilled<span class="d-block">Instructors</span>
+                                <h1 class="text-white" data-toggle="counter-up">200+</h1>
+                                <h6 class="text-uppercase text-white">Career<span class="d-block">
+                                        Opportunities
+                                </span>
                                 </h6>
                             </div>
                         </div>
                         <div class="col-3 px-0">
                             <div class="bg-warning text-center p-4">
-                                <h1 class="text-white" data-toggle="counter-up">1234</h1>
-                                <h6 class="text-uppercase text-white">Happy<span class="d-block">Students</span></h6>
+                                <h1 class="text-white" data-toggle="counter-up">1500+</h1>
+                                <h6 class="text-uppercase text-white"><span class="d-block">Students</span></h6>
                             </div>
                         </div>
                     </div>
@@ -199,19 +203,22 @@
                     <div class="section-title position-relative mb-4">
                         <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Why Choose Us?
                         </h6>
-                        <h1 class="display-4">Why You Should Start Learning with Us?</h1>
+                        <h1 class="display-4">Why You Should Start With Us?</h1>
                     </div>
-                    <p class="mb-4 pb-2">Aliquyam accusam clita nonumy ipsum sit sea clita ipsum clita, ipsum dolores
-                        amet voluptua duo dolores et sit ipsum rebum, sadipscing et erat eirmod diam kasd labore clita
-                        est. Diam sanctus gubergren sit rebum clita amet.</p>
+                    <p class="mb-4 pb-2">
+                        Mtendere Education Consultancy is a leading education consultancy dedicated to providing high-quality education to its clients. Our mission is to help students achieve their dreams and achieve their academic goals, while also providing them with the tools and support they need to succeed.
+                        We strive to provide our clients with the best possible education experience, while also ensuring that our students receive the necessary resources and support to succeed.
+                        Our team of experts and talented instructors are committed to providing our clients with the best possible education experience. We strive to provide a safe, supportive, and inclusive support and learning environment where students feel valued and encouraged to succeed.
+                    </p>
                     <div class="d-flex mb-3">
                         <div class="btn-icon bg-primary mr-4">
                             <i class="fa fa-2x fa-graduation-cap text-white"></i>
                         </div>
                         <div class="mt-n1">
-                            <h4>Skilled Instructors</h4>
-                            <p>Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero clita magna kasd no
-                                nonumy et eos dolor magna ipsum.</p>
+                            <h4>Skilled Team</h4>
+                            <p>
+                                Our team of experts and talented instructors are committed to providing our clients with the best possible education experience. We strive to create a safe, supportive, and inclusive learning environment where students feel valued and encouraged to succeed.
+                            </p>
                         </div>
                     </div>
                     <div class="d-flex mb-3">
@@ -219,9 +226,10 @@
                             <i class="fa fa-2x fa-certificate text-white"></i>
                         </div>
                         <div class="mt-n1">
-                            <h4>International Certificate</h4>
-                            <p>Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero clita magna kasd no
-                                nonumy et eos dolor magna ipsum.</p>
+                            <h4>Visa, Passport And Traveling Assistance</h4>
+                            <p>
+                                We provide visa, passport, and traveling assistance to our students, ensuring that they can secure a scholarship and access to international education opportunities.
+                            </p>
                         </div>
                     </div>
                     <div class="d-flex">
@@ -229,9 +237,10 @@
                             <i class="fa fa-2x fa-book-reader text-white"></i>
                         </div>
                         <div class="mt-n1">
-                            <h4>Online Classes</h4>
-                            <p class="m-0">Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero clita
-                                magna kasd no nonumy et eos dolor magna ipsum.</p>
+                            <h4>Eligibility Test</h4>
+                            <p>
+                                We provide eligibility tests to our students, ensuring that they can secure a scholarship and access to international education opportunities.
+                            </p>
                         </div>
                     </div>
                 </div>
