--- a/index.html
+++ b/index.html
@@ -869,77 +869,78 @@
     <!-- Testimonial End -->
 
     <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
+    <!-- Footer Start -->
+    <div class="container-fluid position-relative overlay-top bg-dark text-white-50 py-5" style="margin-top: 90px;">
+        <div class="container mt-5 pt-5">
             <div class="row">
-                <div class="col-md-12 col-lg-4">
-                    <div class="footer-logo">
+                <div class="col-md-6 mb-5">
+                    <a href="index.html" class="navbar-brand">
+                        <h1 class="mt-n2 text-uppercase text-white"><i class="fa fa-book-reader mr-3"></i>Mtendere Education Consult</h1>
                         <a class="navbar-brand" href="#" image src="img/Mtendere_logo.png"></a>
-                        <p>www.mec.edu<br>
-                            Mtendre Education Consult, Babaje Huse<br>
-                            Off Mandala Road Area 3, Behind NBs<br>
-                            1st Floor Room 1, Lilongwe<br>
-                            +265 999 360 325, 265 887 209 531<br>
-                        </p>
+                    </a>
+                    <p class="m-0">
+                        Mtendere Education Consult is a leading online education company dedicated to providing high-quality education to its clients. Our mission is to help students achieve their dreams and achieve their academic goals, while also providing them with the tools and support they need to succeed.
+                    </p>
+                </div>
+                <div class="col-md-6 mb-5">
+                    <h3 class="text-white mb-4">Newsletter</h3>
+                    <div class="w-100">
+                        <div class="input-group">
+                            <input type="text" class="form-control border-light" style="padding: 30px;"
+                                placeholder="Your Email Address">
+                            <div class="input-group-append">
+                                <button class="btn btn-primary px-4">Sign Up</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
-
-                <div class="col-sm-6 col-md-3 col-lg-2">
-                    <div class="list-menu">
-                        <h4>Services</h4>
-                        <ul class="list-unstyled">
-                            <li><a href="#">About us</a></li>
-                            <li><a href="#">Career Guide</a></li>
-                            <li><a href="#">Admission process</a></li>
-                            <li><a href="#">Scholarship</a></li>
-                            <li><a href="#">Contact us</a></li>
-                            <li><a href="#">Programs to Study</a></li>
-                            <li><a href="#">FAQs</a></li>
-                        </ul>
+            </div>
+            <div class="row">
+                <div class="col-md-4 mb-5">
+                    <h3 class="text-white mb-4">Get In Touch</h3>
+                    <p><i class="fa fa-map-marker-alt mr-2"></i>Babaje Huse
+                        Off Mandala Road Area 3, Behind NBs<br>
+                        1st Floor Room 1, Lilongwe<br>
+                    </p>
+                    <p><i class="fa fa-phone-alt mr-2"></i>+265 999 360 325, 265 887 209 531</p>
+                    <p><i class="fa fa-envelope mr-2"></i>mtendereeduconsult@gmail.com</p>
+                    <div class="d-flex justify-content-start mt-4">
+                        <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-twitter"></i></a>
+                        <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-facebook-f"></i></a>
+                        <a class="text-white mr-4" href="#"><i class="fab fa-2x fa-linkedin-in"></i></a>
+                        <a class="text-white" href="#"><i class="fab fa-2x fa-instagram"></i></a>
                     </div>
                 </div>
-
-                <div class="col-sm-6 col-md-3 col-lg-2">
-                    <div class="list-menu">
-                        <h4>Test preparation</h4>
-                        <ul class="list-unstyled">
-                            <li><a href="#">IELTS</a></li>
-                            <li><a href="#">TOELF</a></li>
-                            <li><a href="#">SAT</a></li>
-                            <li><a href="#">GRE</a></li>
-                        </ul>
+                <div class="col-md-4 mb-5">
+                    <h3 class="text-white mb-4">Scholarships</h3>
+                    <div class="d-flex flex-column justify-content-start">
+                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Web Design</a>
+                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Apps Design</a>
+                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Marketing</a>
+                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Research</a>
+                        <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>SEO</a>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-3 col-lg-2">
-                    <div class="list-menu">
-                        <h4>Top Study destination</h4>
-                        <ul class="list-unstyled">
-                            <li><a href="#"><b>Top Study destination</b></a></li>
-                            <li><a href="#">India</a></li>
-                            <li><a href="#">Italy</a></li>
-                            <li><a href="#">Malaysia</a></li>
-                            <li><a href="#">Malta</a></li>
-                            <li><a href="#">Usa</a></li>
-                            <div class="btn">More</div>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-3 col-lg-2">
-                    <div class="list-menu">
-                        <h4>Follow Us</h4>
-                        <ul class="list-unstyled">
-                            <li><a href="#">Lilongwe, Malawi</a></li>
-                        </ul>
+                <div class="col-md-4 mb-5">
+                    <h3 class="text-white mb-4">Quick Links</h3>
+                    <div class="d-flex flex-column justify-content-start">
+                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Privacy Policy</a>
+                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Terms &
+                            Condition</a>
+                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Regular FAQs</a>
+                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Help & Support</a>
+                        <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Contact</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="copyrights">
-            <div class="container">
-                <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</<p>
-            </div>
+    </div>
+    <div class="copyrights">
+        <div class="container">
+            <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</<p>
         </div>
-    </footer>
+    </div>
+    
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
     <!-- JavaScript Libraries -->
