--- a/about.html
+++ b/about.html
@@ -286,8 +286,10 @@
                 <div class="col-md-4 mb-5">
                     <h3 class="text-white mb-4">Get In Touch</h3>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>Babaje Huse
-                        Off Mandala Road Area 3, Behind NBs<br>
-                        1st Floor Room 1, Lilongwe<br>
+                        Off Mandala Road <br> 
+                        Area 3, Behind NBs<br>
+                        1st Floor Room 1, <br>
+                        Lilongwe<br>
                     </p>
                     <p><i class="fa fa-phone-alt mr-2"></i>+265 999 360 325, 265 887 209 531</p>
                     <p><i class="fa fa-envelope mr-2"></i>mtendereeduconsult@gmail.com</p>
