--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
                             <a href="detail.html" class="dropdown-item">Kolkata Univesity</a>
                             <a href="detail.html" class="dropdown-item">Goa University</a>
                         </div>
-                    </div>                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    </div>                    
+                    <a href="contact.html" class="nav-item nav-link">Contact</a>
                     <a href="#" class="nav-item nav-link">Blog</a>
                     <a href="#" class="nav-item nav-link d-none d-lg-block">
                         <i class="fa fa-search"></i>
@@ -120,54 +121,88 @@
 
     <!-- Hero Section -->
     <section id="hero" class="wow fadeIn">
-        <!---- owl-carousel --->
-        <div class="owl-carousel owl-theme">
-            <div class="item">
-                <img src="img/hero-1.jpg" alt="hero-1">
-                <div class="hero-container">
-                    <h1>Welcome to Mtendere Education Consult</h1>
-                    <h2>Study Abroad.</h2>
-                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
-                </div>
+        <div id="carouselDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
-            <div class="item">
-                <img src="img/hero-2.jpg" alt="hero-2">
-                <div class="hero-container">
-                    <h1>Welcome to Mtendere Education Consult</h1>
-                    <h2>Study Abroad.</h2>
-                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
-                </div>
-            </div>
-            <div class="item">
-                <img src="img/hero-3.jpg" alt="hero-3">
-                <div class="hero-container">
-                    <h1>Welcome to Mtendere Education Consult</h1>
-                    <h2>Study Abroad.</h2>
-                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
-                </div>
-            </div>
-        </div>
-        <!-- End owl-carousel --->
-
-        <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
-            <div class="input-group">
-                <div class="input-group-prepend">
-                    <button class="btn btn-outline-light bg-white text-body px-4 dropdown-toggle" type="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Programs & Studie's</button>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Banchelors Degree</a>
-                        <a class="dropdown-item" href="#">Masters Degree</a>
-                        <a class="dropdown-item" href="#">PHDs</a>
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="images/hero-bg.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Welcome to Mtendere Education Consult</h5>
+                        <p>
+                            We Offer Unparalleled Education
+                            <a href="#" class="btn btn-primary px-4 py-2">Learn More</a>
+                        </p>
                     </div>
                 </div>
-                <input type="text" class="form-control border-light" style="padding: 30px 25px;" placeholder="Keyword">
-                <div class="input-group-append">
-                    <button class="btn btn-secondary px-4 px-lg-5">Search</button>
+                <div class="carousel-item" data-bs-interval="2000">
+                    <img src="images/hero-bg.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                    <h5>Career Guidance, admission and visa support</h5>
+                    <p>
+                        We provide guidance on your career path
+                        <a href="#" class="btn btn-primary px-4 py-2">Learn More</a>
+                    </p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/c0f4e6ff-82a4-45d8-a3d5-8996247af5d0.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                    <h5>International studies for all</h5>
+                    <p>
+                        We offer a world-class Scholarships and studies
+                        <a href="#" class="btn btn-primary px-4 py-2">Learn More</a>
+                    </p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>                
+    </section>
+
+
+    <!-----<section id="hero" class="wow fadeIn">
+        <!---- owl-carousel --
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img src="img/c0f4e6ff-82a4-45d8-a3d5-8996247af5d0.jpg" alt="hero-1">
+                <div class="hero-container">
+                    <h1>Welcome to Mtendere Education Consult</h1>
+                    <h2>Study Abroad.</h2>
+                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
+                </div>
+            </div>
+            <div class="item">
+                <img src="img/header.jpg" alt="hero-2">
+                <div class="hero-container">
+                    <h1>Welcome to Mtendere Education Consult</h1>
+                    <h2>Study Abroad.</h2>
+                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/hero-bg.jpg " alt="hero-3">
+                <div class="hero-container">
+                    <h1>Welcome to Mtendere Education Consult</h1>
+                    <h2>Study Abroad.</h2>
+                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
                 </div>
             </div>
         </div>
+        <!-- End owl-carousel ---
     </section>
-    <!-- #hero -->
+    <!-- #hero --
+    ----->
 
     <!--Get Started Section-->
     <section id="get-started" class="padd-section text-center">
